external-crates/move/crates/move-compiler/tests/move_2024/typing/invalid_variant_creation_scope.move
module 0x42::m {

    public enum F {
        A(u64)
    }

}

module 0x42::n {

    fun t(): 0x42::m::F {
        0x42::m::F::A(10)
    }

}
